--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/express": "^5.0.3",
     "@types/node": "^24.1.0",
+    "express": "^5.1.0",
     "typescript": "^5.8.3"
   }
 }
