--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "@types/node": "^24.1.0",
     "express": "^5.1.0",
     "typescript": "^5.8.3"
+  },
+  "volta": {
+    "node": "22.6.0"
   }
 }
