--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,9 @@
         "module": "nodenext",
         "outDir": "dist",
         "lib": ["es2022", "DOM"],
-        "strict": true
+        "strict": true,
+        "allowImportingTsExtensions": true,
+        "noEmit": true,
+        "verbatimModuleSyntax": true
     }
 }
